# data-preproc

./: .gitignore  MANIFEST.in  PROCESSORS.md  README.md  pyproject.toml  run_tests.py  setup.py
configs/: dcvlr-sample-preproc.yaml  open_genome_packed.yaml
configs/example/: demo_all_processors.yaml  example-refusal-filter.yaml  example_config.yaml  example_config_processors.yaml  example_image_count_filter.yaml  example_image_toxicity_filter.yaml  example_text_toxicity_filter.yaml  example_toxicity_filters.yaml  example_vl_config.yaml
configs/test/: test-image-transform.yaml  test-modular-processors.yaml  test-regex-filter.yaml
data_preproc/: __init__.py  __main__.py  mm_plugin.py  prompt_tokenizers.py  prompters.py
data_preproc/cli/: args.py  config.py  preprocess.py
data_preproc/core/: datasets.py
data_preproc/loaders/: __init__.py  processor.py  tokenizer.py
data_preproc/processors/: __init__.py  advanced_mapping.py  base.py  deduplicator.py  hf_filter.py  image_count_filter.py  image_toxicity_filter.py  image_transform.py  multimodal.py  pipeline.py  random_sampler.py  regex_filter.py  regex_transform.py  sample_packer.py  text_toxicity_filter.py
data_preproc/prompt_strategies/: __init__.py  alpaca.py  chat_template.py  completion.py  filter_only.py  vision_language.py
data_preproc/utils/: __init__.py  compute_device.py  data.py  dataset_converters.py  dict.py  error_handling.py  hf_upload.py  logging.py  tokenization.py
tests/: README.md  __init__.py  test_basic.py  test_deduplicator.py  test_hf_upload.py  test_image_toxicity_filter.py  test_subset_support.py  test_text_toxicity_filter.py  test_vl_config.py
